--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
-# Data files (large)
+# Large data files (do not commit)
 mnist_png/
-imagenet_images/
-frames_v_BrushingTeeth_g01_c01/
-*.avi
 *.csv
-train.csv
-test.csv
-
-# Generated outputs (can regenerate)
-*.JPG
-tsne_plot.png
-sift_clusters.png
-hog_clusters.png
-lbp_clusters.png
 
 # System files
 .DS_Store
